2000-08-25  Charles-Antoine Gauthier  <charles.gauthier@nrc.ca>

	* include/mvme16x_hw.h: Added NVRAM_CONFIGURE macro in
	a manner that should work for 162, 162lx, and 167.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.