@@ -1,11 +1,12 @@
-## 
+##
 ## $Id$
-## 
+##
 
 AUTOMAKE_OPTIONS = foreign 1.4
 
+VPATH = @srcdir@:$(srcdir):$(srcdir)/../../mvme167/network
+
 PGM = $(ARCH)/network.rel
-VPATH=$(srcdir):$(srcdir)/../../mvme167/network
 
 C_FILES = network.c
 C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.o)
@@ -13,6 +14,7 @@ C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.o)
 OBJS = $(C_O_FILES)
 
 include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
+include $(top_srcdir)/../../../../../../automake/compile.am
 include $(top_srcdir)/../../../../../../automake/lib.am
 
 #
