@@ -1,3 +1,10 @@
+2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* clock/Makefile.am, console/Makefile.am, consolex/Makefile.am,
+	start/Makefile.am, startup/Makefile.am, timer/Makefile.am,
+	tod/Makefile.am, wrapup/Makefile.am, network/Makefile.am: Include
+	compile.am
+
 2000-08-25  Charles-Antoine Gauthier  <charles.gauthier@nrc.ca>
 
 	* include/mvme16x_hw.h: Added NVRAM_CONFIGURE macro in
